--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                                     </div>
                                     <div>
                                         <h3 class="text-lg font-semibold text-gray-900">Bachelor's Degree</h3>
-                                        <p class="text-sm text-gray-600">2020 - Present</p>
+                                        <p class="text-sm text-gray-600"> April 2023 - Present</p>
                                     </div>
                                 </div>
                                 <h4 class="font-semibold text-gray-900 mb-2">Computer Science</h4>
