--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                 <li>• <b style="color: rgb(59, 46, 180);">Security::</b> JWT & Oauth2</li>
                                 <li>• <b style="color: rgb(59, 46, 180);">Hashing Students Data::</b> Bcrypt Encoders</li>
                                 <li>• <b style="color: rgb(59, 46, 180);">Communication::</b>Gmail SMTP Servers</li>
-                                <li>• <b style="color: rgb(59, 46, 180);">Architecture::</b>: Monolithic Application</li>
+                                <li>• <b style="color: rgb(59, 46, 180);">Architecture::</b>: Monolithic App (Spring MVC)</li>
                                 <li>• <b style="color: rgb(59, 46, 180);">Best Practices::</b>Design Patterns & DSA</li>
                                 <li>• <b style="color: rgb(59, 46, 180);">Streaming::</b>Vimeo api integration</li>
                                 <li>• <b style="color: rgb(59, 46, 180);">User interface::</b>Responsive design with Tailwind CSS</li>
@@ -387,6 +387,9 @@
                             </a>
                             <a href="https://studypoint.co.za" class="border border-primary text-primary px-4 py-2 rounded-lg text-sm font-semibold hover:bg-primary hover:text-white transition-all duration-300">
                                 <i class="fab fa-github"></i>
+                            </a>
+                            <a href="studypoint-testing.netlify.app" target="_blank" class="bg-gradient-to-r from-primary to-bright-blue text-white px-4 py-2 rounded-lg text-sm font-semibold hover:shadow-lg transition-all duration-300 flex-1 text-center">
+                                Try Sample
                             </a>
                         </div>
                     </div>
@@ -580,7 +583,14 @@
                                 <p class="text-gray-600 mb-3">University of the People, USA</p>
                                 <p class="text-sm text-gray-500">
                                     Pursuing comprehensive education in computer science fundamentals, 
-                                    software engineering principles, and modern development practices.
+                                    software engineering principles, and modern development practices.<br><br>
+                                    <li>CS 1105 Digital Electronics & Computer Architecture</li>
+                                    <li>CS 2204 Communications and Networking</li>
+                                    <li>CS 4405 Mobile Applications</li>
+                                    <li>CS 4407 Data Mining and Machine Learning</li>
+                                    <li>CS 3306 Databases 2</li>
+                                    <li>CS 3307 Operating Systems 2</li>
+
                                 </p>
                             </div>
                         </div>
@@ -604,14 +614,16 @@
                                     </div>
                                     <div>
                                         <h3 class="text-lg font-semibold text-gray-900">A Level Certificate</h3>
-                                        <p class="text-sm text-gray-600">Completed</p>
+                                        <p class="text-sm text-gray-600">2018 - 2020</p>
                                     </div>
                                 </div>
                                 <h4 class="font-semibold text-gray-900 mb-2">Advanced Level Education</h4>
                                 <p class="text-gray-600 mb-3">Zimbabwe</p>
                                 <p class="text-sm text-gray-500 mb-4">
-                                    Completed advanced level education with focus on mathematics, 
-                                    sciences, and analytical thinking skills.
+                                    Completed advanced level education with focus on :
+                                    <li>Pure Mathematics</li>
+                                    <li>Accounting</li>
+                                    <li>Business Studies.</li>
                                 </p>
                                 <div class="mt-4">
                                     <a href="A'level.pdf" target="_blank" 
@@ -639,15 +651,20 @@
                                         <i class="fas fa-graduation-cap text-white"></i>
                                     </div>
                                     <div>
-                                        <h3 class="text-lg font-semibold text-gray-900">Online BootCamp</h3>
+                                        <h3 class="text-lg font-semibold text-gray-900">ALX AFRICA</h3>
                                         <p class="text-sm text-gray-600"> August 2022 - February 2023</p>
                                     </div>
                                 </div>
                                 <h4 class="font-semibold text-gray-900 mb-2">Software Development</h4>
-                                <p class="text-gray-600 mb-3">ALX AFRICA, Kenya</p>
+                                <p class="text-gray-600 mb-3">Kenya</p>
                                 <p class="text-sm text-gray-500">
-                                    software engineering principles, and modern development practices.
-                                    Skills: Git Bash, Python, Html & CSS
+                                    software engineering principles, and modern development practices.<br><br/>
+                                    <li>C</li>
+                                    <li>Python</li>
+                                    <li>Git Bash</li>
+                                    <li>Slack collaboration</li>
+                                    <li>Html & CSS</li>
+                                    
                                 </p>
                             </div>
                         </div>
