updating AI Tools

--- a/index.html
+++ b/index.html
@@ -264,13 +264,13 @@
                     </div>
                     <div class="space-y-4">
                         <div class="flex items-center justify-between">
-                            <span class="text-gray-700">PyTorch</span>
+                            <span class="text-gray-700">Lovable</span>
                             <div class="w-24 bg-gray-200 rounded-full h-2">
                                 <div class="bg-gradient-to-r from-bright-purple to-bright-pink h-2 rounded-full" style="width: 85%"></div>
                             </div>
                         </div>
                         <div class="flex items-center justify-between">
-                            <span class="text-gray-700">DevTools</span>
+                            <span class="text-gray-700">Langchain</span>
                             <div class="w-24 bg-gray-200 rounded-full h-2">
                                 <div class="bg-gradient-to-r from-secondary to-bright-green h-2 rounded-full" style="width: 88%"></div>
                             </div>
