updating fullstsck app link

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </h2>
                 <p class="text-lg text-gray-600 mb-8 max-w-3xl mx-auto">
                     Passionate about creating innovative web solutions and implementing AI technologies. 
-                    Specializing in full-stack development with Java, Python, and modern frameworks.
+                    Am a full-stack developer speacializing in Machine Learning(python) & Backend Development with Java & Springboot.
                 </p>
                 
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
@@ -382,14 +382,14 @@
                             </ul>
                         </div>
                         <div class="flex gap-2">
-                            <a href="#" target="_blank" class="bg-gradient-to-r from-primary to-bright-blue text-white px-4 py-2 rounded-lg text-sm font-semibold hover:shadow-lg transition-all duration-300 flex-1 text-center">
-                                Private on Git
+                            <a href="https://github.com/foreJavaDev/studypoint-fullstack-clone" target="_blank" class="bg-gradient-to-r from-primary to-bright-blue text-white px-4 py-2 rounded-lg text-sm font-semibold hover:shadow-lg transition-all duration-300 flex-1 text-center">
+                                Backend Private Clone
                             </a>
-                            <a href="https://studypoint.co.za" class="border border-primary text-primary px-4 py-2 rounded-lg text-sm font-semibold hover:bg-primary hover:text-white transition-all duration-300">
+                            <a href="https://github.com/foreJavaDev/studypoint-fullstack-clone" class="border border-primary text-primary px-4 py-2 rounded-lg text-sm font-semibold hover:bg-primary hover:text-white transition-all duration-300">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="https://studypoint-clone.netlify.app" target="_blank" class="bg-gradient-to-r from-primary to-bright-blue text-white px-4 py-2 rounded-lg text-sm font-semibold hover:shadow-lg transition-all duration-300 flex-1 text-center">
-                                Try Sample
+                                How it looks?, click here
                             </a>
                         </div>
                     </div>
