--- a/index.html
+++ b/index.html
@@ -370,12 +370,12 @@
                             </div>
                             <ul class="text-sm text-gray-600 space-y-1">
                                 <li>• <b style="color: rgb(59, 46, 180);">Payments::</b> Paystack gateway integration</li>
-                                <li>• <b style="color: rgb(59, 46, 180);">Security::</b> JWT & Oauth2</li>
+                                <li>• <b style="color: rgb(59, 46, 180);">Security::</b> JWTS</li>
                                 <li>• <b style="color: rgb(59, 46, 180);">Hashing Students Data::</b> Bcrypt Encoders</li>
                                 <li>• <b style="color: rgb(59, 46, 180);">Communication::</b>Gmail SMTP Servers</li>
                                 <li>• <b style="color: rgb(59, 46, 180);">Architecture::</b>: Monolithic App (Spring MVC)</li>
                                 <li>• <b style="color: rgb(59, 46, 180);">Best Practices::</b>Design Patterns & DSA</li>
-                                <li>• <b style="color: rgb(59, 46, 180);">Streaming::</b>Vimeo api integration</li>
+                                <li>• <b style="color: rgb(59, 46, 180);">Streaming::</b>Vimeo api integration*</li>
                                 <li>• <b style="color: rgb(59, 46, 180);">User interface::</b>Responsive design with Tailwind CSS</li>
                                 <li>• <b style="color: rgb(59, 46, 180);">Deployment (Docker)::</b>Cloud-Digital Ocean </li>
 
@@ -383,13 +383,13 @@
                         </div>
                         <div class="flex gap-2">
                             <a href="https://github.com/foreJavaDev/studypoint-fullstack-clone" target="_blank" class="bg-gradient-to-r from-primary to-bright-blue text-white px-4 py-2 rounded-lg text-sm font-semibold hover:shadow-lg transition-all duration-300 flex-1 text-center">
-                                Backend Private Clone
+                                Backend Code Clone
                             </a>
                             <a href="https://github.com/foreJavaDev/studypoint-fullstack-clone" class="border border-primary text-primary px-4 py-2 rounded-lg text-sm font-semibold hover:bg-primary hover:text-white transition-all duration-300">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="https://studypoint-clone.netlify.app" target="_blank" class="bg-gradient-to-r from-primary to-bright-blue text-white px-4 py-2 rounded-lg text-sm font-semibold hover:shadow-lg transition-all duration-300 flex-1 text-center">
-                                How it looks?, click here
+                                Visit site ""
                             </a>
                         </div>
                     </div>
