--- a/index.html
+++ b/index.html
@@ -383,13 +383,13 @@
                         </div>
                         <div class="flex gap-2">
                             <a href="https://github.com/foreJavaDev/studypoint-fullstack-clone" target="_blank" class="bg-gradient-to-r from-primary to-bright-blue text-white px-4 py-2 rounded-lg text-sm font-semibold hover:shadow-lg transition-all duration-300 flex-1 text-center">
-                                Backend Code Clone
+                                View Backend Code Clone
                             </a>
                             <a href="https://github.com/foreJavaDev/studypoint-fullstack-clone" class="border border-primary text-primary px-4 py-2 rounded-lg text-sm font-semibold hover:bg-primary hover:text-white transition-all duration-300">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="https://studypoint-clone.netlify.app" target="_blank" class="bg-gradient-to-r from-primary to-bright-blue text-white px-4 py-2 rounded-lg text-sm font-semibold hover:shadow-lg transition-all duration-300 flex-1 text-center">
-                                Visit site ""
+                                Visit Live site
                             </a>
                         </div>
                     </div>
