--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                 <li>• <b style="color: rgb(59, 46, 180);">Best Practices::</b>Design Patterns & DSA</li>
                                 <li>• <b style="color: rgb(59, 46, 180);">Streaming::</b>Vimeo api integration*</li>
                                 <li>• <b style="color: rgb(59, 46, 180);">User interface::</b>Responsive design with Tailwind CSS</li>
-                                <li>• <b style="color: rgb(59, 46, 180);">Deployment (Docker)::</b>Cloud-Digital Ocean </li>
+                                <li>• <b style="color: rgb(59, 46, 180);">Deployment (Docker)::</b>Cloud(VPS)-Digital Ocean </li>
 
                             </ul>
                         </div>
