--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                             <a href="https://github.com/foreJavaDev/studypoint-fullstack-clone" class="border border-primary text-primary px-4 py-2 rounded-lg text-sm font-semibold hover:bg-primary hover:text-white transition-all duration-300">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="https://studypoint-cl" target="_blank" class="bg-gradient-to-r from-primary to-bright-blue text-white px-4 py-2 rounded-lg text-sm font-semibold hover:shadow-lg transition-all duration-300 flex-1 text-center">
+                            <a href="https://studypoint.co.za" target="_blank" class="bg-gradient-to-r from-primary to-bright-blue text-white px-4 py-2 rounded-lg text-sm font-semibold hover:shadow-lg transition-all duration-300 flex-1 text-center">
                                 Visit Live site
                             </a>
                         </div>
